--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-server.port=8080
+server.port= 8080
 
-spring.datasource.url = jdbc:mysql://localhost:3306/newdb
-spring.datasource.username = root
-spring.datasource.password = gaiaknight
-#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/newdb?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= gaiaknight
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = none
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
+
+# App Properties
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
