--- a/news/src/main/resources/application.properties
+++ b/news/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDiale
 spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+thanhdc.app.jwtSecret= thanhdcSecretKey
+thanhdc.app.jwtExpirationMs= 86400000
